Saved tests ordered by time of completion, after test completion new redirects, stuck header after redirect from test fix

--- a/src/app/modal-window/modal-window.component.css
+++ b/src/app/modal-window/modal-window.component.css
@@ -4,8 +4,8 @@
   align-items: center;
   flex-direction: column;
   padding: 8px 16px 16px;
-  width: 25rem;
-  height: 15rem;
+  width: 30rem;
+  height: 20rem;
 }
 .main_container.light {
   background-color: var(--main-bg-color-light);
@@ -13,10 +13,10 @@
 .main_container.dark {
   background-color: var(--main-bg-color-dark);
 }
-mat-dialog-content.dark{
+mat-dialog-content.dark {
   color: var(--main-text-color-dark);
 }
-h2.dark{
+h2.dark {
   color: var(--main-text-color-dark);
 }
 
